--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Project euler problem 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.5.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
-    "prettier": "^2.8.8",
+    "jest": "^29.5.0",
     "typescript": "^5.0.4"
   }
 }
